Release history for Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes

{{$NEXT}}
 [00 Major]
 - Interals overhauled again
 - new checks

 [Checks]
 - Now scrapes lib/ and t/ and recommends various things for DZil plugin work.
 - author=kentfredric is now warned against.
 - gitversions is now warned against
 - failure to have one of bumpversions or gitversions is a serious warning
 - derecommend Readonly

 [Dependencies::Stats]
 - Dependencies changed since 0.002003, see misc/*.deps* for details
 - runtime: +1

 [Interals]
 - Internals overhauled to have some private classes, greatly simplifying syntax and logic.

0.002003 2014-08-21T05:45:11Z
 [00 Minor]
 - Reframe tests in terms of now exported version of dztest.

 [Dependencies::Stats]
 - Dependencies changed since 0.002002, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - test: +1 -2

0.002002 2014-08-18T04:36:16Z
 [00 Minor]
 - add Class::Load to things to derecommend: Module::Runtime is muchly preferred.

 [Dependencies::Stats]
 - Dependencies changed since 0.002001, see misc/*.deps* for details
 - develop: (suggests: ↑1)

0.002001 2014-08-17T18:48:43Z
 [Bugfix]
 - 'ok' state tracking within a few subs was wrong, @haarg++

0.002000 2014-08-17T09:16:08Z
 [00 Minor]
 - Code internally overhauled to be less spur-of-the-moment and maintainable.
 - Now has a list of modules to unrecommend if seen in $distmeta;

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)
 - test: +3

 [Tests]
 - Has some basic tests now.

0.001001 2014-08-16T21:40:56Z
 [00 Trivial]
 - don't think misc/ are bad when they're good.

0.001000 2014-08-16T21:38:10Z
 - CPANDAY!
 - First version.
